SOLR-16340: Provide a cluster_id label for all metrics exposed by the Solr Prometheus Exporter