@@ -113,9 +113,9 @@ public class SolrStandaloneScraperTest extends RestTestBase {
     assertEquals("solr_ping", samples.name);
     assertEquals(1, samples.samples.size());
     assertEquals(1.0, samples.samples.get(0).value, 0.001);
-    assertEquals(Collections.singletonList("base_url"), samples.samples.get(0).labelNames);
+    assertEquals(List.of("base_url", "cluster_id"), samples.samples.get(0).labelNames);
     assertEquals(
-        Collections.singletonList(restTestHarness.getAdminURL()),
+        List.of(restTestHarness.getAdminURL(), "undefined"),
         samples.samples.get(0).labelValues);
   }
 
@@ -139,8 +139,11 @@ public class SolrStandaloneScraperTest extends RestTestBase {
 
     assertEquals(1, replicaSamples.size());
 
-    assertEquals(1, replicaSamples.size());
     assertEquals("solr_metrics_jvm_buffers", replicaSamples.get(0).name);
+
+    // clusterId is not set for tests, falls back to "default"
+    assertEquals("cluster_id", replicaSamples.get(0).samples.get(0).labelNames.get(2));
+    assertEquals("undefined", replicaSamples.get(0).samples.get(0).labelValues.get(2));
   }
 
   @Test
